@@ -1,3 +1,8 @@
+2002-09-27 Araki Ken <arakiken@users.sf.net>
+
+	* x_imagelib_*.o linked directly, not via x_imagelib.o.
+	  (Thanks to Nobuyoshi Nakada san)
+
 2002-09-20  Nobuyoshi Nakada  <nobu.nokada@softhome.net>
 
 	* kiklib: link kik_pty_*.o and kik_utmp_*.o directly, not via
